class AnimationParametre
{
    public const string Velocity = "Velocity";
    public const string IsJumpIdle = "isJumpIdle";
    public const string IsJumpRun = "isJumpRun";
    public const string Dash = "Dash";
    public const string Spawn = "Spawn";
    public const string Death = "Death";
    public const string Attack = "Attack";
}